# ros2-library-project

./: .gitignore  .gitmodules  README.md
Gazebo_Rumbo/src/: CMakeLists.txt  package.xml
Gazebo_Rumbo/src/launch/: bringup_launch.py  localization_launch.py  multi_rumbo_simulation_launch.py  rumbo_library.launch.py
Gazebo_Rumbo/src/models/rumbo/: model.config  robot.sdf  robot.xacro
Gazebo_Rumbo/src/params/: nav2_multirumbo_params_template.yaml  robots.yaml
Navigation_System/src/nav_system/: package.xml  setup.py
Navigation_System/src/nav_system_interfaces/: CMakeLists.txt
PoC/: Battery  Gazebo_Rumbo  battery_services  gazebo_ros_batteries  install.sh  lib_runner.sh  out_of_order.sh  rumbo_run.sh
PoC/AP_Engine/: CMakeLists.txt  README.MD  ap_run.sh  ap_run_network_partition.sh
PoC/AP_Engine/lib/: action_writer.cpp  action_writer.hpp  ap_engine.hpp  ap_engine_setup.hpp  common_data.cpp  common_data.hpp  feedback_parser.cpp  feedback_parser.h  goal_parser.cpp  goal_parser.h  poc_config.hpp  poc_file_watcher.cpp  poc_utils.cpp  poc_utils.hpp  process.hpp
PoC/AP_Engine/run/: ap_engine.cpp
Storage/: create_abort.sh  create_goal.sh
Storage/examples/: test_file_action.txt  test_file_feedback.txt  test_file_feedback2.txt  test_file_goal.txt
config/: config.vars  cyclone-dds-interface-select-laptop.xml
doc/doxygen/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Robot__Reader_2src_2robot__reader_2robot__reader_2config_8py.html  (+185 more)
doc/usecases/: uml_seq_arch_abort.plantuml  uml_seq_arch_goal.plantuml
use_case_resources/: README.md
(+177 files in other folders)
